correction mobile

--- a/web/app/themes/pitch-theme-sage-10/resources/styles/components/menu/desktop/_nav.scss
+++ b/web/app/themes/pitch-theme-sage-10/resources/styles/components/menu/desktop/_nav.scss
@@ -149,7 +149,7 @@ nav.navbar {
   }
 }
 
-@include media-breakpoint-up(lg) {
+@include media-breakpoint-up(xl) {
   .navbar .nav-item .dropdown-menu {
     display: block;
     visibility: hidden;
